--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,9 +28,9 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
-file.reference.gson-2.8.2.jar=C:\\Users\\Sebastian Vasquez\\Desktop\\Nueva carpeta\\Gson\\gson-2.8.2.jar
-file.reference.itext5-itextpdf-5.5.12.jar=C:\\Users\\Sebastian Vasquez\\Desktop\\Nueva carpeta\\driver-pdf\\itext5-itextpdf-5.5.12.jar
-file.reference.mysql-connector-j-8.4.0.jar=C:\\Users\\Sebastian Vasquez\\mysql-connector\\mysql-connector-j-8.4.0\\mysql-connector-j-8.4.0.jar
+file.reference.gson-2.8.2.jar=C:\\Users\\josue\\Desktop\\UTP\\Ciclo 6\\Desarrollo web integrado\\Gson\\gson-2.8.2.jar
+file.reference.itext5-itextpdf-5.5.12.jar=C:\\Users\\josue\\Desktop\\UTP\\Ciclo 6\\Desarrollo web integrado\\driver-pdf\\itext5-itextpdf-5.5.12.jar
+file.reference.mysql-connector-j-8.4.0.jar=C:\\Users\\josue\\Desktop\\UTP\\Ciclo 6\\Desarrollo web integrado\\mysql-connector-j-8.4.0\\mysql-connector-j-8.4.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
