agregando mensaje de confirmación al eliminar, quitando eliminar movimiento y editar stock de productos, quitando elementos innecesarios de la interfaz

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,8 +28,8 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
-file.reference.gson-2.8.2.jar-1=C:\\Users\\Sebastian Vasquez\\Desktop\\Nueva carpeta\\Gson\\gson-2.8.2.jar
-file.reference.itext5-itextpdf-5.5.12.jar-1=C:\\Users\\Sebastian Vasquez\\Desktop\\Nueva carpeta\\driver-pdf\\itext5-itextpdf-5.5.12.jar
+file.reference.gson-2.8.2.jar=C:\\Users\\Sebastian Vasquez\\librerias-itext-gson\\gson-2.8.2.jar
+file.reference.itext5-itextpdf-5.5.12.jar=C:\\Users\\Sebastian Vasquez\\librerias-itext-gson\\itext5-itextpdf-5.5.12.jar
 file.reference.mysql-connector-j-8.4.0.jar-1=C:\\Users\\Sebastian Vasquez\\Desktop\\mysql-connector-j-8.4.0\\mysql-connector-j-8.4.0.jar
 includes=**
 j2ee.compile.on.save=true
@@ -40,9 +40,9 @@ j2ee.platform.classpath=${j2ee.server.home}/bin/tomcat-juli.jar:${j2ee.server.ho
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.gson-2.8.2.jar-1}:\
-    ${file.reference.itext5-itextpdf-5.5.12.jar-1}:\
-    ${file.reference.mysql-connector-j-8.4.0.jar-1}
+    ${file.reference.mysql-connector-j-8.4.0.jar-1}:\
+    ${file.reference.gson-2.8.2.jar}:\
+    ${file.reference.itext5-itextpdf-5.5.12.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
